# Santiagoat

./: .gitignore  Algorithms.c  Algorithms.h  CMakeLists.txt  Graph.c  Graph.h  LinkedList.h  README.md  Solutions.c  Solutions.h  Stack.c  Stack.h  Tarjan.c  Tarjan.h  Utils.c  Utils.h  main.c
Heuristics/: MaximumDegreeHeuristic.c  MaximumDegreeHeuristic.h  bridgeHeuristic.c  bridgeHeuristic.h  fullRandomHeuristic.c  fullRandomHeuristic.h  hillClimbLocalSearch.c  hillClimbLocalSearch.h
Meta-Heuristics/: grasp.c  grasp.h
